--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,9 +21,11 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.22",
+    "angular2-google-maps": "^0.17.0",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "mdbootstrap": "^4.3.1",
     "ng2-charts": "^1.5.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
